--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Catbook</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <h1 class="navstyle">Catbook</h1>
+    </nav>
+    <img src="images.jpeg" alt="A image of a cat">
+    <h1>Buka Buka</h1>
+    <hr>
+    <div class="u-flex">
+    <section class="u-textCenter">
+        <h4>About me</h4>
+        <p>我是一个酒精过敏的帅哥</p>
+    </section>
+    <section class="u-textCenter">
+        <h4>What type of my favorite cat</h4>
+        <p>我最喜欢仓鼠</p>
+    </section>
+    </div>
     <script src="demo.js"></script>
 </body>
 </html>
