--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <h1 class="navstyle">Catbook</h1>
     </nav>
-    <img src="images.jpeg" alt="A image of a cat">
+    <img src="cang.webp" alt="A image of a cat">
     <h1>Buka Buka</h1>
     <hr>
     <div class="u-flex">
