--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>我是一个酒精过敏的帅哥</p>
     </section>
     <section class="u-textCenter">
-        <h4>What type of my favorite cat</h4>
+        <h4>What type of my favorite animal</h4>
         <p>我最喜欢仓鼠</p>
     </section>
     </div>
