random color change

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h4>What type of my favorite animal</h4>
         <p>我最喜欢仓鼠</p>
     </section>
+    <button class="but" id="changeColor">click this button to change the backgroundcolor</button>
+    <button id="reset" class="but">reset</button>
     </div>
     <script src="demo.js"></script>
 </body>
