--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    
-    <script src="demo.js"></script>
+    <input type="text" id="text-input">
+    <button id="check-btn">Check</button>
+    <div id="result"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
