--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <input type="text" id="text-input">
-    <button id="check-btn">Check</button>
-    <div id="result"></div>
+    <div id="container">
+        <h2 id="top">Detecting palindrome strings</h2>
+        <input type="text" id="text-input">
+        <button id="check-btn">Check</button>
+        <div id="result"></div>
+    </div>
 
+    
     <script src="script.js"></script>
 </body>
 </html>
