暂时保存一下

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="styles.css" rel="stylesheet">
+    <title>Roman-numberal-converter</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="container">
-        <h2 id="top">Detecting palindrome strings</h2>
-        <input type="text" id="text-input">
-        <button id="check-btn">Check</button>
-        <div id="result"></div>
+    <div id="input-container">
+        <input type="number" id="number">
+        <button id="convert-btn">convert to roman number</button>
     </div>
-
-    
+    <div id="output-container">
+        <div id="output"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
