--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roman-numberal-converter</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <div id="input-container">
-        <input type="number" id="number">
-        <button id="convert-btn">convert to roman number</button>
-    </div>
-    <div id="output-container">
-        <div id="output"></div>
-    </div>
-    <script src="script.js"></script>
+    
 </body>
 </html>
